[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/scripts/interface/Pause.gd" type="Script" id=1]
[ext_resource path="res://src/scenes/interface/Settings.tscn" type="PackedScene" id=2]

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.588235 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Menu" type="VBoxContainer" parent="CenterContainer"]
margin_left = 459.0
margin_top = 240.0
margin_right = 565.0
margin_bottom = 360.0
custom_constants/separation = 9

[node name="Label" type="Label" parent="CenterContainer/Menu"]
margin_right = 106.0
margin_bottom = 14.0
text = "Game Paused"
align = 1
valign = 1

[node name="Control" type="Control" parent="CenterContainer/Menu"]
margin_top = 23.0
margin_right = 106.0
margin_bottom = 33.0
rect_min_size = Vector2( 0, 10 )

[node name="ResumeBtn" type="Button" parent="CenterContainer/Menu"]
margin_top = 42.0
margin_right = 106.0
margin_bottom = 62.0
focus_neighbour_top = NodePath("../QuitBtn")
text = "Resume Game"

[node name="SettingsBtn" type="Button" parent="CenterContainer/Menu"]
margin_top = 71.0
margin_right = 106.0
margin_bottom = 91.0
text = "Settings"

[node name="QuitBtn" type="Button" parent="CenterContainer/Menu"]
margin_top = 100.0
margin_right = 106.0
margin_bottom = 120.0
focus_neighbour_bottom = NodePath("../ResumeBtn")
text = "Quit Game"

[node name="Settings" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="CenterContainer/Menu/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="CenterContainer/Menu/SettingsBtn" to="." method="_on_SettingsBtn_pressed"]
[connection signal="pressed" from="CenterContainer/Menu/QuitBtn" to="." method="_on_QuitBtn_pressed"]
